--- a/templates/Booth_info2.html
+++ b/templates/Booth_info2.html
@@ -5,6 +5,11 @@
     <link rel="stylesheet" href="{% static "css/booth.css" %}" >
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="{% static "js/Booth_Info.js" %}"></script>
+    <script>
+        $.ajaxSetup({
+          headers: { "X-CSRFToken": '{{csrf_token}}' }
+        });
+    </script>
 {% endblock css %}
 
 {% block title %}
@@ -18,7 +23,6 @@
             <div class="introduce_title Gmarket-Medium-White">
                 <div>{{intruduce.title}}</div>
                 <div class = "con flex-justify-center">
-                    {% comment %} <button id="myid" value = "{{introduce.title}}" class = "move" ></button> {% endcomment %}
                     <p id="count-{{ intruduce.id }}">
                         {{ intruduce.likecount }}개
                     </p>
@@ -28,7 +32,6 @@
                             <path class="heartIcon" fill="rgba(255, 255, 255, 0.02)" d="m479.435-93.999-71.001-63.87Q305.173-250.565 237.76-318.26q-67.413-67.696-106.696-121.609-39.282-53.913-55.065-99.609Q60.216-585.174 60.216-634q0-102.479 68.37-171.131 68.37-68.653 170.849-68.653 51.435 0 97.869 19.739 46.435 19.739 82.131 56.913 35.695-37.174 82.13-56.913 46.435-19.739 97.87-19.739 102.478 0 171.414 68.653Q899.784-736.479 899.784-634q0 48.261-15.5 93.957-15.5 45.695-55.066 99.326-39.565 53.63-107.261 121.609-67.695 67.978-171.522 161.239l-71 63.87Z"/>
                         </svg>
                     </button>
-                    
                 </div>
             </div>
 
