--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,14 @@
         {% block content%} {% endblock content %} 
         
         {% block script %} {% endblock script %}
-        <script> console.log(window.innerHeight);</script>
+        <script>
+
+            let vh = window.innerHeight * 0.01;
+            console.log("vh : ");
+            console.log(vh);
+            document.documentElement.style.setProperty('--vh', `${vh}px`);
+        
+        </script>
         <script type="text/javascript" src="{% static "js/script.js" %}"></script>
     </body>
 </html>
